fix: error for args

--- a/src/app/pages/history/index/index.component.html
+++ b/src/app/pages/history/index/index.component.html
@@ -18,7 +18,7 @@
                               (update)="onUpdateCondition($event)"
                               (delete)="onDeleteCondition($event)"
                               (rawdata)="onRawData($event)"
-                              (refresh)="onLoadingConditions($event)"
+                              (refresh)="onLoadingConditions()"
           ></ngx-condition-list>
           <br />
           <br />
@@ -28,7 +28,7 @@
                               (update)="onUpdateProcedure($event)"
                               (delete)="onDeleteProcedure($event)"
                               (rawdata)="onRawData($event)"
-                              (refresh)="onLoadingProcedures($event)"
+                              (refresh)="onLoadingProcedures()"
           ></ngx-procedure-list>
 
           <br/>
