--- a/src/app/@theme/components/header/header.component.html
+++ b/src/app/@theme/components/header/header.component.html
@@ -10,19 +10,10 @@
 </div>
 
 <nb-actions size="medium" class="header-container" [class.right]="position === 'normal'" [class.left]="position === 'inverse'">
-  <!-- FIXME: 暫時隱藏 -->
-  <!--<nb-action *ngIf="!isAuthenticated" (click)="redirectLogin()" class="control-item">-->
-    <!--<button class="btn btn-info">登入</button>-->
-  <!--</nb-action>-->
-  <!--<nb-action *nbIsGranted="['view', 'nb-action-user']">-->
-    <!--<nb-user [nbContextMenu]="userMenu" [name]="user?.name" [picture]="user?.picture"></nb-user>-->
-  <!--</nb-action>-->
-  <!--<nb-action class="control-item" disabled icon="nb-notifications"></nb-action>-->
-  <!--<nb-action class="control-item" icon="nb-email"></nb-action>-->
   <nb-action class="control-item">
     <button class="btn btn-sm btn-info" (click)="update(baseUrl.value)"><mat-icon [inline]="true">done</mat-icon></button>
   </nb-action>
   <nb-action class="control-item">
-    <input class="mat-h3" type="text" nbInput #baseUrl placeholder="輸入 BaseURL" style="width: 404px;" value="http://192.168.100.55:8000/baseDstu3"/>
+    <input class="mat-h3" type="text" nbInput #baseUrl placeholder="輸入 BaseURL" style="width: 404px;" [value]="serviceUrl"/>
   </nb-action>
 </nb-actions>
